--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,30 @@
 
 version: 2
 updates:
-  - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Docker dependency updates (for Dockerfiles)
+  - package-ecosystem: "docker"
+    directory: "/"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 10
+
+  # GitHub Actions updates (for GitHub CI/CD workflows)
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+
+  # Terraform updates (for Terraform configuration files)
+  - package-ecosystem: "terraform"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+
+  # NPM updates (for JavaScript projects using npm)
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
