--- a/.github/workflows/00-publish-docker-image.yml
+++ b/.github/workflows/00-publish-docker-image.yml
@@ -3,12 +3,13 @@ name: Publish Docker Image to Registry
 on:
   push:
     branches:
-      - 'main'
+      - main
 
 jobs:
   build-and-publish:
     name: Build and Publish Docker Image
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,23 +32,13 @@ jobs:
       - name: Build and Push Image
         uses: docker/build-push-action@v6
         with:
+          context: .
+          file: Dockerfile
           push: true
-          tags: heyvaldemar/aws-kubectl:latest, heyvaldemar/aws-kubectl:${{ github.sha }}
+          tags: |
+            heyvaldemar/aws-kubectl:latest
+            heyvaldemar/aws-kubectl:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
+          pull: true
           cache-from: type=registry,ref=heyvaldemar/aws-kubectl:cache
           cache-to: type=inline
-          platforms: linux/amd64,linux/arm64
-          file: Dockerfile
-
-      - name: Scan Image with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'heyvaldemar/aws-kubectl:latest'
-          format: 'table'
-          severity: 'CRITICAL'
-
-      - name: Upload Trivy Scan Results
-        if: failure() # This step runs only if the Trivy scan fails
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-scan-results
-          path: trivy-report.txt
